@@ -67,6 +67,7 @@
         --with-popt=external \
         --with-libelf \
         --with-selinux \
+	--with-python \
         --enable-build-warnings \
         --enable-build-pic \
         --enable-build-pie \
