@@ -6,6 +6,7 @@
 
 #include "structmember.h"
 
+#include <rpmio.h>
 #include "rpmdebug-py.c"
 
 #include <rpmcli.h>
