@@ -4,6 +4,7 @@
 
 #include "system.h"
 
+#include <rpmio.h>
 #include "spec-py.h"
 
 /** \ingroup python
