@@ -1,4 +1,7 @@
 4.5 -> 5.0:
+    - jbj: rescuscitate rpm-python, include <rpmio.h> explicitly.
+    - jbj: adopt rpm.org signal handling <pmatlai@redhat.com>
+    - jbj: unbreak macros by using [e,ee) and en as count. todo: look fe usage.
     - jbj: use _macro_BUFSIZ, not compiled in BUFSIZ, to size expansion targets.
     - jbj: enable %{dirname:...} macro primitive.
     - jbj: add %{?dir/file} as shorthand for %{?dir:%{dir}/file}.
